[metadata]
name = class_utils
version = attr: class_utils.VERSION
description = A package with utility functions for our AI class that are repeatedly called from a number of notebooks.
long_description = file: README.md
keywords = class, machine learning, artificial intelligence, data analysis
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
author = Michal Gregor

[options]
zip_safe = False
include_package_data = True
packages = find:
;scripts =
;  bin/first.py
;  bin/second.py
install_requires =
   numpy
   pandas
   matplotlib
   ipython
   seaborn
   scikit-learn
   scipy
   lime
   eli5
   pdpbox
   graphviz

[options.package_data]
* = *.txt, *.rst
;hello = *.msg

;[options.extras_require]
;pdf = ReportLab>=1.2; RXP
;rest = docutils>=0.3; pack ==1.1, ==1.3

;[options.packages.find]
;exclude =
;    src.subpackage1
;    src.subpackage2
